# django-passkeys

./: .gitignore  .readthedocs.yaml  404.html  CHANGELOG.md  EXAMPLE.md  Example.md  LICENSE  MANIFEST.in  README.md  build.sh  build_docs.sh  index.html  mkdocs.yml  pyproject.toml  requirements.txt  requirements_test.txt  runtests.py  setup.py  sitemap.xml  tox.ini  tox_old.ini
.github/workflows/: basic_checks.yml  docs.yml  run_tox.yml
Example/: index.html
changelog/: index.html
docs/: Example.md  changelog.md  drf-setup.md  index.md  jscode.md  settings.md  template-setup.md
drf-setup/: index.html
example/: .coveragerc  manage.py  passkeys  test_db
example/example/: auth.py  settings.py  views.py
example/example/templates/: home.html  login.html
example/passkey_example/: admin.py  apps.py  forms.py  settings.py  urls.py  util.py  views.py  wsgi.py
example/passkey_example/demo/: apps.py  views.py
example/passkey_example/demo/templates/: base.html  bootstrap.html  home.html  login.html  (+1 more)
example/passkey_example/templates/: admin_login.html  bootstrap.html  login.html  logout.html
example/project/: apps.py  settings.py  urls.py  views.py  wsgi.py
example/project/templates/: base.html  home.html
example/test_app/: auth.py  settings.py  soft_webauthn.py  test_settings.py  urls.py  views.py  wsgi.py
example/test_app/templates/: base.html  choose.html  home.html  login.html  logout.html  logout_modal.html  public.html
example/test_app/tests/: test_api.py  test_current_platform.py  test_fido.py  test_passkeys.py  test_views.py
jscode/: index.html
passkeys/: FIDO2.py  __init__.py  admin.py  apps.py  backend.py  helpers.py  models.py  urls.py  util.py  views.py  webauthn.py
passkeys/api/: serializers.py  service.py  token_backends.py  urls.py  views.py
passkeys/migrations/: 0001_initial.py  0002_alter_userpasskey_id_and_more.py  0003_alter_userpasskey_options_alter_userpasskey_user_and_more.py
passkeys/templates/: PassKeys.html  check_passkeys.js  passkeys.js
passkeys/templates/passkeys/: PassKeys.html  check.js  check_passkeys.js  login.js  manage.html  modal.html  passkeys.html  passkeys.js
passkeys/tests/: __init__.py  backend.py  fido.py  platform.py  soft_webauthn.py  softwebauthn.py  views.py
search/: search_index.json
settings/: index.html
template-setup/: index.html
tests/: settings.py  urls.py
tests/templates/: base.html
(+14 files in other folders)
