[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "django-passkeys"
version = "2.1b2"
authors = [
    { name="Mohamed ElKalioby", email="mkalioby@mkalioby.com" },
]
requires-python = ">= 3.7"
description = "A Django app for passwordless authentication using WebAuthn and Passkeys."
readme = "README.md"
license = { text = "MIT" }
keywords = ["django", "webauthn", "passkeys", "passwordless", "authentication", "fido2"]
dependencies = [
        'django >= 2.0',
        'ua-parser',
        'user-agents',
        'fido2>=1.1.1,<2.3.0',
  ]
classifiers=[
        # "Development Status :: 5 - Production/Stable",
        "Development Status :: 4 - Beta",
        "Environment :: Web Environment",
        "Framework :: Django",
        "Framework :: Django :: 2.2",
        "Framework :: Django :: 3.2",
        "Framework :: Django :: 4.2",
        "Framework :: Django :: 5.2",
        "Framework :: Django :: 6.0",
        "Intended Audience :: Developers",
        "Operating System :: OS Independent",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Programming Language :: Python :: 3.14",
        "Topic :: Software Development :: Libraries :: Python Modules",
]
[project.optional-dependencies]
drf= [ 'djangorestframework>=3.14']
drf-jwt=  [
            'djangorestframework>=3.14',
            'djangorestframework-simplejwt>=5.0',
        ]
[project.urls]
Homepage = "https://example.com"
Documentation = "https://app.readthedocs.org/projects/django-passkeys/"
Repository = "https://github.com/mkalioby/django-passkeys.git"
Issues = "https://github.com/mkalioby/django-passkeys/issues"
Changelog = "https://github.com/mkalioby/django-passkeys/blob/master/CHANGELOG.md"

[tool.setuptools]
include-package-data = true
zip-safe = false
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
include = ["passkeys*"]

[tox]
skipsdist = true